송우현 영민짱플러그인으로 소캣클라이언트대체

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,16 +60,16 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Asset/SimPoly_Town/Map/Map_1_Pastel_Color_Night.Map_1_Pastel_Color_Night
+EditorStartupMap=/Game/Maps/Map_1_Night.Map_1_Night
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Asset/SimPoly_Town/Map/Map_1_Pastel_Color_Night.Map_1_Pastel_Color_Night
+GameInstanceClass=/Script/FPSProject.FPSProjectGameInstance
+GameDefaultMap=/Game/Maps/Map_1_Night.Map_1_Night
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/FPSProject.FPSProjectGameMode
+GlobalDefaultGameMode=/Game/BP_FPSGameMode.BP_FPSGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
