--- a/FPSProject.uproject
+++ b/FPSProject.uproject
@@ -18,6 +18,14 @@
 		{
 			"Name": "VRM4U",
 			"Enabled": true
+		},
+		{
+			"Name": "SocketClient",
+			"Enabled": true
 		}
+	],
+	"TargetPlatforms": [
+		"Windows",
+		"Mac"
 	]
 }
