이민석 버그 수정/ Backtolobby 서버작업

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,3 +8,7 @@ ProjectID=5F9A33F146F0258618696D9292968E99
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bUseIoStore=False
+
