--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,14 +60,14 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Map_1_Night.Map_1_Night
+EditorStartupMap=/Game/Maps/Map_Matching.Map_Matching
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/FPSProject.FPSProjectGameInstance
-GameDefaultMap=/Game/Maps/Map_1_Night.Map_1_Night
+GameDefaultMap=/Game/Maps/Map_Matching.Map_Matching
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/BP_FPSGameMode.BP_FPSGameMode_C
 GlobalDefaultServerGameMode=None
